feat : list article

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Kitabantu</title>
 </head>
 
-<body>
-    <nav class="py-2 bg-primary">
+<body class="font-popins bg-[#F7F7F7]">
+    <nav class="sticky top-0 bg-primary">
         <form action="">
-            <div class="flex max-w-screen-sm mx-auto">
+            <div class="flex max-w-screen-sm px-8 py-5 mx-auto">
                 <input type="text" name="search" placeholder="Cari Disini"
                     class="w-full px-3 py-1 border-none rounded-s-full">
                 <button type="submit" class="px-3 py-1 bg-white rounded-e-full">
@@ -24,6 +24,213 @@
             </div>
         </form>
     </nav>
+
+    <main class="grid max-w-screen-sm mx-auto bg-secondary">
+        <section class="grid grid-cols-2">
+            <aside class="flex items-center justify-center">
+                <h1 class="text-[#4A4A4A] text-lg">Kita Bantu Sesama di <br> Aplikasi <span
+                        class="font-bold">KitaBantu</span></h1>
+            </aside>
+            <aside class="flex items-center justify-end">
+                <img src="assets/images/banner.svg" alt="banner">
+            </aside>
+        </section>
+        <section class="bg-[#FFFFFF] min-h-screen rounded-t-[50px]">
+            <div class="p-8 ps-16">
+                <h1 class="font-bold text-[#4A4A4A] text-lg">Categories</h1>
+                <ul class="flex flex-wrap gap-2 my-4 mb-10 text-sm text-primary">
+                    <li class="flex gap-2 px-4 py-1 text-white border-2 rounded-full bg-primary">
+                        <img src="/assets/icons/order-list.svg" alt="order-list">
+                        All
+                    </li>
+                    <li class="px-4 py-1 border-2 rounded-full">Kemanusiaan</li>
+                    <li class="px-4 py-1 border-2 rounded-full">Zakat</li>
+                    <li class="px-4 py-1 border-2 rounded-full">Rumah Ibadah</li>
+                </ul>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2220.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2225.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2225-1.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2225-2.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2225-3.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                    <aside class="flex items-center justify-center w-1/3">
+                        <img src="assets/images/Rectangle2225-4.jpg" alt="image">
+                    </aside>
+                    <aside class="flex flex-col justify-start w-2/3 gap-2 py-2">
+                        <div class="flex items-center gap-1">
+                            <p class="text-xs text-primary">Yayasan Kita Bantu
+                            </p>
+                            <img src="/assets/icons/badge.svg" alt="badge" class="h-2">
+                        </div>
+                        <h1 class="text-[#4A4A4A] font-bold text-sm">Sedekah Subuh Bantu Nutrisi Santri dan Tahfidz</h1>
+                        <div class="flex items-center gap-2">
+                            <img src="/assets/icons/clock.svg" alt="clock" class="h-3">
+                            <p class="text-xs text-primary">34 hari lagi</p>
+                        </div>
+                        <div class="w-full h-3 border-1 rounded-full bg-[#EFF0F1]">
+                            <div class="w-1/2 h-full rounded-full bg-primary">
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-1">
+                            <p class="text-xs text-primary">Terkumpul</p>
+                            <h1 class="text-primary">
+                                <span class="text-sm font-bold">Rp. 184.000.000</span>
+                                <span class="text-xs font-light">/ Rp.
+                                    100.000.000.000</span>
+                            </h1>
+                        </div>
+                    </aside>
+                </div>
+                <hr>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
