--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="font-popins bg-[#F7F7F7]">
-    <nav class="sticky top-0 bg-primary">
+    <header class="sticky top-0 bg-primary">
         <form action="">
             <div class="flex max-w-screen-sm px-8 py-5 mx-auto">
                 <input type="text" name="search" placeholder="Cari Disini"
@@ -23,7 +23,7 @@
                 </button>
             </div>
         </form>
-    </nav>
+    </header>
 
     <main class="grid max-w-screen-sm mx-auto bg-secondary">
         <section class="grid grid-cols-2">
@@ -36,7 +36,7 @@
             </aside>
         </section>
         <section class="bg-[#FFFFFF] min-h-screen rounded-t-[50px]">
-            <div class="p-8 ps-16">
+            <div class="p-16 pb-0">
                 <h1 class="font-bold text-[#4A4A4A] text-lg">Categories</h1>
                 <ul class="flex flex-wrap gap-2 my-4 mb-10 text-sm text-primary">
                     <li class="flex gap-2 px-4 py-1 text-white border-2 rounded-full bg-primary">
@@ -227,6 +227,38 @@
                     </aside>
                 </div>
                 <hr>
+                <nav class="sticky bottom-0 w-full bg-white border-2 rounded-full shadow-lg">
+                    <ul class="grid grid-cols-3 gap-5 p-4 px-6 border-slate-100 text-primary">
+                        <li
+                            class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-white rounded-full bg-primary">
+                            <svg width="22" height="18" class="hidden sm:inline" viewBox="0 0 22 18"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z"
+                                    fill="white" />
+                            </svg>
+                            Home
+                        </li>
+                        <li class="flex items-center justify-center gap-2 text-sm sm:border-slate-200 sm:border-x-2">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg" class="hidden sm:inline">
+                                <path
+                                    d="M14 3.78947V5.68421H4V3.78947H14ZM12 7.57895V9.47368H4V7.57895H12ZM15 16.1053L18 18V0H0V18L3 16.1053L6 18L9 16.1053L12 18L15 16.1053ZM16 1.89474V14.4568L15 13.8316L12 15.7263L9 13.8316L6 15.7263L3 13.8316L2 14.4568V1.89474H16Z"
+                                    fill="#B8B8B8" />
+                            </svg>
+                            Riwayat
+                        </li>
+                        <li class="flex items-center justify-center gap-2 text-sm">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg" class="hidden sm:inline">
+                                <path
+                                    d="M9 0C10.1935 0 11.3381 0.474106 12.182 1.31802C13.0259 2.16193 13.5 3.30653 13.5 4.5C13.5 5.69347 13.0259 6.83807 12.182 7.68198C11.3381 8.52589 10.1935 9 9 9C7.80653 9 6.66193 8.52589 5.81802 7.68198C4.97411 6.83807 4.5 5.69347 4.5 4.5C4.5 3.30653 4.97411 2.16193 5.81802 1.31802C6.66193 0.474106 7.80653 0 9 0ZM9 11.25C13.9725 11.25 18 13.2638 18 15.75V18H0V15.75C0 13.2638 4.0275 11.25 9 11.25Z"
+                                    fill="#B8B8B8" />
+                            </svg>
+                            Akun
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </section>
     </main>
