--- a/index.html
+++ b/index.html
@@ -25,29 +25,34 @@
         </form>
     </header>
 
-    <main class="grid max-w-screen-sm mx-auto bg-secondary">
+    <main class="max-w-screen-sm mx-auto bg-secondary">
         <section class="grid grid-cols-2">
-            <aside class="flex items-center justify-center">
-                <h1 class="text-[#4A4A4A] text-lg">Kita Bantu Sesama di <br> Aplikasi <span
+            <aside class="flex items-center justify-center p-8">
+                <h1 class="text-[#4A4A4A] text-lg">Kita Bantu Sesama di Aplikasi <span
                         class="font-bold">KitaBantu</span></h1>
             </aside>
-            <aside class="flex items-center justify-end">
+            <aside class="flex justify-end">
                 <img src="assets/images/banner.svg" alt="banner">
             </aside>
         </section>
         <section class="bg-[#FFFFFF] min-h-screen rounded-t-[50px]">
-            <div class="p-16 pb-0">
-                <h1 class="font-bold text-[#4A4A4A] text-lg">Categories</h1>
-                <ul class="flex flex-wrap gap-2 my-4 mb-10 text-sm text-primary">
-                    <li class="flex gap-2 px-4 py-1 text-white border-2 rounded-full bg-primary">
-                        <img src="/assets/icons/order-list.svg" alt="order-list">
+            <div class="p-8 pb-0">
+                <h1 class="font-bold text-[#4A4A4A] mb-4 text-lg">Categories</h1>
+                <ul class="flex gap-2 mb-10 overflow-auto">
+                    <li
+                        class="flex items-center gap-2 px-2 py-1 text-sm text-white border-2 rounded-full bg-primary text-nowrap">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M12.8 14L9.6 10.8889H12V3.11111H9.6L12.8 0L16 3.11111H13.6V10.8889H16M0 12.4444V10.8889H8V12.4444M0 7.77778V6.22222H5.6V7.77778M0 3.11111V1.55556H3.2V3.11111H0Z"
+                                fill="white" />
+                        </svg>
                         All
                     </li>
-                    <li class="px-4 py-1 border-2 rounded-full">Kemanusiaan</li>
-                    <li class="px-4 py-1 border-2 rounded-full">Zakat</li>
-                    <li class="px-4 py-1 border-2 rounded-full">Rumah Ibadah</li>
+                    <li class="px-2 py-1 text-sm border-2 rounded-full text-nowrap text-primary">Kemanusiaan</li>
+                    <li class="px-2 py-1 text-sm border-2 rounded-full text-nowrap text-primary">Zakat</li>
+                    <li class="px-2 py-1 text-sm border-2 rounded-full text-nowrap text-primary">Rumah Ibadah</li>
                 </ul>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2220.jpg" alt="image">
                     </aside>
@@ -77,7 +82,7 @@
                     </aside>
                 </div>
                 <hr>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2225.jpg" alt="image">
                     </aside>
@@ -107,7 +112,7 @@
                     </aside>
                 </div>
                 <hr>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2225-1.jpg" alt="image">
                     </aside>
@@ -137,7 +142,7 @@
                     </aside>
                 </div>
                 <hr>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2225-2.jpg" alt="image">
                     </aside>
@@ -167,7 +172,7 @@
                     </aside>
                 </div>
                 <hr>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2225-3.jpg" alt="image">
                     </aside>
@@ -197,7 +202,7 @@
                     </aside>
                 </div>
                 <hr>
-                <div class="flex-wrap gap-6 my-6 sm:flex sm:!flex-nowrap">
+                <div class="flex gap-6 my-6">
                     <aside class="flex items-center justify-center w-1/3">
                         <img src="assets/images/Rectangle2225-4.jpg" alt="image">
                     </aside>
@@ -228,11 +233,10 @@
                 </div>
                 <hr>
                 <nav class="sticky bottom-0 w-full bg-white border-2 rounded-full shadow-lg">
-                    <ul class="grid grid-cols-3 gap-5 p-4 px-6 border-slate-100 text-primary">
+                    <ul class="grid grid-cols-3 gap-2 p-2 border-slate-100 text-primary">
                         <li
                             class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-white rounded-full bg-primary">
-                            <svg width="22" height="18" class="hidden sm:inline" viewBox="0 0 22 18"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z"
                                     fill="white" />
@@ -241,7 +245,7 @@
                         </li>
                         <li class="flex items-center justify-center gap-2 text-sm sm:border-slate-200 sm:border-x-2">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" class="hidden sm:inline">
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M14 3.78947V5.68421H4V3.78947H14ZM12 7.57895V9.47368H4V7.57895H12ZM15 16.1053L18 18V0H0V18L3 16.1053L6 18L9 16.1053L12 18L15 16.1053ZM16 1.89474V14.4568L15 13.8316L12 15.7263L9 13.8316L6 15.7263L3 13.8316L2 14.4568V1.89474H16Z"
                                     fill="#B8B8B8" />
@@ -250,7 +254,7 @@
                         </li>
                         <li class="flex items-center justify-center gap-2 text-sm">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" class="hidden sm:inline">
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M9 0C10.1935 0 11.3381 0.474106 12.182 1.31802C13.0259 2.16193 13.5 3.30653 13.5 4.5C13.5 5.69347 13.0259 6.83807 12.182 7.68198C11.3381 8.52589 10.1935 9 9 9C7.80653 9 6.66193 8.52589 5.81802 7.68198C4.97411 6.83807 4.5 5.69347 4.5 4.5C4.5 3.30653 4.97411 2.16193 5.81802 1.31802C6.66193 0.474106 7.80653 0 9 0ZM9 11.25C13.9725 11.25 18 13.2638 18 15.75V18H0V15.75C0 13.2638 4.0275 11.25 9 11.25Z"
                                     fill="#B8B8B8" />
