--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="font-popins bg-[#F7F7F7]">
-    <header class="sticky top-0 bg-primary">
+    <header>
         <form action="">
             <div class="flex max-w-screen-sm px-8 py-5 mx-auto">
                 <input type="text" name="search" placeholder="Cari Disini"
