--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body class="font-popins bg-[#F7F7F7]">
     <header>
         <form action="">
-            <div class="flex max-w-screen-sm px-8 py-5 mx-auto">
+            <div class="flex items-center max-w-screen-sm px-8 py-5 mx-auto">
                 <input type="text" name="search" placeholder="Cari Disini"
-                    class="w-full px-3 py-1 border-none rounded-s-full">
-                <button type="submit" class="px-3 py-1 bg-white rounded-e-full">
+                    class="w-full px-3 border-none rounded-s-full">
+                <button type="submit" class="px-3 bg-white rounded-e-full">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#CACACA">
                         <path
