--- a/categories.html
+++ b/categories.html
@@ -8,7 +8,7 @@
     <title>Categories</title>
 </head>
 
-<body class="font-popins bg-[#F7F7F7]">
+<body>
     <header>
         <div class="flex max-w-screen-sm px-8 py-5 mx-auto">
             <a href="index.html" class="flex items-center gap-2 text-white">
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main class="max-w-screen-sm mx-auto bg-[#FFFFFF] min-h-screen">
+    <main class="max-w-screen-sm mx-auto bg-[#FFFFFF]">
         <section class="grid justify-center grid-cols-2 gap-10 p-8 pt-12">
             <div class="card">
                 <svg width="53" height="43" viewBox="0 0 53 43" fill="none" xmlns="http://www.w3.org/2000/svg">
