--- a/humanity-category.html
+++ b/humanity-category.html
@@ -4,37 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Humanitiy Category</title>
     <link rel="stylesheet" href="./src/output.css">
-    <title>Kitabantu</title>
 </head>
 
 <body>
     <header>
-        <form action="">
-            <div class="flex items-center max-w-screen-sm px-8 py-5 mx-auto">
-                <input type="text" name="search" placeholder="Cari Disini"
-                    class="w-full px-3 border-none rounded-s-full">
-                <button type="submit" class="px-3 bg-white rounded-e-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#CACACA">
-                        <path
-                            d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
-                    </svg>
-                </button>
-            </div>
-        </form>
+        <nav class="flex items-center max-w-screen-sm px-8 py-5 mx-auto">
+            <a href="index.html" class="flex items-center gap-2 text-white">
+                <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M5.30587 10.4019L10.8618 16.0093L8.9172 18L0 9L8.9172 0L10.8618 1.99065L5.30587 7.59813H27.5294V10.4019H5.30587Z"
+                        fill="white" />
+                </svg>
+                <h1 class="font-bold">Kemanusiaan</h1>
+            </a>
+        </nav>
     </header>
 
-    <main class="max-w-screen-sm mx-auto bg-secondary">
-        <section class="grid grid-cols-2">
-            <aside class="flex items-center justify-center p-8">
-                <h1 class="text-[#4A4A4A] text-lg">Kita Bantu Sesama di Aplikasi <span
-                        class="font-bold">KitaBantu</span></h1>
-            </aside>
-            <aside class="flex justify-end">
-                <img src="assets/images/banner.svg" alt="banner">
-            </aside>
-        </section>
+    <main class="max-w-screen-sm mx-auto">
         <section class="bg-[#FFFFFF] min-h-screen rounded-t-[50px]">
             <div class="p-8 pb-0">
                 <h1 class="font-bold text-[#4A4A4A] mb-4 text-lg">Categories</h1>
@@ -232,41 +220,9 @@
                     </aside>
                 </div>
                 <hr>
-                <nav class="sticky bottom-0 w-full bg-white border-2 rounded-full shadow-lg">
-                    <ul class="grid grid-cols-3 gap-2 p-2 border-slate-100 text-primary">
-                        <li
-                            class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-white rounded-full bg-primary">
-                            <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z"
-                                    fill="white" />
-                            </svg>
-                            Home
-                        </li>
-                        <li class="flex items-center justify-center gap-2 text-sm sm:border-slate-200 sm:border-x-2">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M14 3.78947V5.68421H4V3.78947H14ZM12 7.57895V9.47368H4V7.57895H12ZM15 16.1053L18 18V0H0V18L3 16.1053L6 18L9 16.1053L12 18L15 16.1053ZM16 1.89474V14.4568L15 13.8316L12 15.7263L9 13.8316L6 15.7263L3 13.8316L2 14.4568V1.89474H16Z"
-                                    fill="#B8B8B8" />
-                            </svg>
-                            Riwayat
-                        </li>
-                        <li class="flex items-center justify-center gap-2 text-sm">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M9 0C10.1935 0 11.3381 0.474106 12.182 1.31802C13.0259 2.16193 13.5 3.30653 13.5 4.5C13.5 5.69347 13.0259 6.83807 12.182 7.68198C11.3381 8.52589 10.1935 9 9 9C7.80653 9 6.66193 8.52589 5.81802 7.68198C4.97411 6.83807 4.5 5.69347 4.5 4.5C4.5 3.30653 4.97411 2.16193 5.81802 1.31802C6.66193 0.474106 7.80653 0 9 0ZM9 11.25C13.9725 11.25 18 13.2638 18 15.75V18H0V15.75C0 13.2638 4.0275 11.25 9 11.25Z"
-                                    fill="#B8B8B8" />
-                            </svg>
-                            Akun
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </section>
     </main>
-
 </body>
 
 </html>
