feat : detail post page

--- a/categories.html
+++ b/categories.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main class="max-w-screen-sm mx-auto bg-[#FFFFFF]">
+    <main class="max-w-screen-sm mx-auto bg-[#FFFFFF] min-h-screen">
         <section class="grid justify-center grid-cols-2 gap-10 p-8 pt-12">
             <div class="card">
                 <svg width="53" height="43" viewBox="0 0 53 43" fill="none" xmlns="http://www.w3.org/2000/svg">
