--- a/humanity-category.html
+++ b/humanity-category.html
@@ -22,8 +22,8 @@
         </nav>
     </header>
 
-    <main class="max-w-screen-sm mx-auto">
-        <section class="bg-[#FFFFFF] min-h-screen rounded-t-[50px]">
+    <main class="max-w-screen-sm min-h-screen mx-auto bg-[#FFFFFF]">
+        <section class="rounded-t-[50px]">
             <div class="p-8 pb-0">
                 <h1 class="font-bold text-[#4A4A4A] mb-4 text-lg">Categories</h1>
                 <ul class="flex gap-2 mb-10 overflow-auto">
