--- a/index.html
+++ b/index.html
@@ -232,8 +232,9 @@
                     </aside>
                 </div>
                 <hr>
-                <nav class="sticky bottom-0 w-full bg-white border-2 rounded-full shadow-lg">
-                    <ul class="grid grid-cols-3 gap-2 p-2 border-slate-100 text-primary">
+                <nav class="sticky bottom-0 py-3">
+                    <ul
+                        class="grid grid-cols-3 gap-2 p-2 bg-white rounded-full shadow-lg border-slate-100 text-primary">
                         <li
                             class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-white rounded-full bg-primary">
                             <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
