feat : payment success page

--- a/payment.html
+++ b/payment.html
@@ -48,8 +48,12 @@
                                 fill="#ACACAC" />
                         </svg>
                     </div>
-                    <div class="w-[328px]">
-                        <img src="/assets/images/payment-bank.png" alt="bank">
+                    <div class="flex gap-3">
+                        <img src="/assets/images/payment-bca.png" alt="">
+                        <img src="/assets/images/payment-mandiri.png" alt="">
+                        <img src="/assets/images/payment-bni.png" alt="">
+                        <img src="/assets/images/payment-bsi.png" alt="">
+                        <img src="/assets/images/payment-bri.png" alt="">
                     </div>
                 </div>
                 <hr>
