feat : before login page

--- a/confirm-donation.html
+++ b/confirm-donation.html
@@ -24,8 +24,8 @@
     </header>
 
     <main class="bg-[#ffff] max-w-screen-sm mx-auto min-h-screen">
-        <form action="confirm-donation.html" method="post">
-            <section class="p-8">
+        <section class="p-8">
+            <form action="confirm-donation.html" method="post">
                 <div class="flex flex-col gap-3 p-4 text-white rounded-xl bg-primary">
                     <h2 class="text-xl font-semibold">Donasi Sebesar</h2>
                     <h1 class="text-4xl font-semibold">Rp. 750.000</h1>
@@ -64,13 +64,14 @@
                         </label>
                     </div>
                 </div>
-            </section>
-            <div class="sticky bottom-0 px-8 py-3">
-                <button class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
-                    <h1>Konfirmasi</h1>
-                </button>
-            </div>
-        </form>
+                <div class="sticky bottom-0 py-3">
+                    <button
+                        class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
+                        <h1>Konfirmasi</h1>
+                    </button>
+                </div>
+            </form>
+        </section>
     </main>
 </body>
 
