--- a/histories.html
+++ b/histories.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <header class="flex items-center max-w-screen-sm px-8 py-5 mx-auto">
-        <div class="w-full text-center">
-            <h1 class="text-2xl font-semibold text-white">Riwayat</h1>
-        </div>
+    <header>
+        <nav class="box-border max-w-screen-sm px-8 py-5 mx-auto text-center">
+            <h1 class="font-semibold text-white">Riwayat
+            </h1>
+        </nav>
     </header>
 
-    <main class="max-w-screen-sm min-h-screen mx-auto bg-white">
+    <main class="max-w-screen-sm min-h-screen mx-auto bg-white ">
         <section class="flex flex-col gap-8 p-8">
             <div class="flex gap-3">
                 <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -143,7 +144,7 @@
                 </div>
             </div>
             <hr>
-            <nav class="sticky bottom-0 w-full py-3 mx-auto">
+            <nav class="sticky bottom-0 py-3">
                 <ul class="grid grid-cols-3 gap-2 p-2 bg-white rounded-full shadow-lg border-slate-100 text-primary">
                     <li class="flex items-center justify-center gap-2 px-4 py-2 text-sm text-primary">
                         <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
