--- a/account.html
+++ b/account.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/output.css">
-    <title>Before login</title>
+    <title>Account</title>
 </head>
 
 <body>
@@ -18,14 +18,35 @@
 
     <main class="max-w-screen-sm min-h-screen mx-auto">
         <section class="flex flex-col bg-primary">
-            <div class="flex flex-col items-center justify-center gap-5 p-8 text-center text-white">
-                <h1 class="text-2xl font-semibold">Silahkan Masuk Dengan Akun Anda Untuk Membantu di kitabantu</h1>
-                <button class="w-full py-4 text-lg font-semibold bg-white rounded-full text-primary">Masuk
-                    Sekarang</button>
-                <p>Belum Punya Akun? <span class="font-semibold">Daftar</span></p>
+            <div class="flex gap-5 px-8 py-12 text-center text-white">
+                <svg width="77" height="77" viewBox="0 0 77 77" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M38.5 66.22C28.875 66.22 20.3665 61.292 15.4 53.9C15.5155 46.2 30.8 41.965 38.5 41.965C46.2 41.965 61.4845 46.2 61.6 53.9C59.0552 57.6905 55.6171 60.7968 51.5888 62.9452C47.5604 65.0937 43.0655 66.2183 38.5 66.22ZM38.5 11.55C41.5632 11.55 44.501 12.7669 46.6671 14.9329C48.8331 17.099 50.05 20.0367 50.05 23.1C50.05 26.1632 48.8331 29.101 46.6671 31.2671C44.501 33.4331 41.5632 34.65 38.5 34.65C35.4367 34.65 32.499 33.4331 30.3329 31.2671C28.1669 29.101 26.95 26.1632 26.95 23.1C26.95 20.0367 28.1669 17.099 30.3329 14.9329C32.499 12.7669 35.4367 11.55 38.5 11.55ZM38.5 0C33.4441 0 28.4377 0.995832 23.7667 2.93064C19.0957 4.86544 14.8514 7.70133 11.2764 11.2764C4.05624 18.4965 0 28.2892 0 38.5C0 48.7108 4.05624 58.5035 11.2764 65.7236C14.8514 69.2987 19.0957 72.1346 23.7667 74.0694C28.4377 76.0042 33.4441 77 38.5 77C48.7108 77 58.5035 72.9438 65.7236 65.7236C72.9438 58.5035 77 48.7108 77 38.5C77 17.2095 59.675 0 38.5 0Z"
+                        fill="white" />
+                </svg>
+                <div class="flex flex-col justify-center gap-3">
+                    <h1 class="text-2xl font-semibold text-white">Light Knight</h1>
+                    <button class="px-6 py-1 bg-white rounded-full text-primary">Edit Profile</button>
+                </div>
             </div>
             <div class="flex flex-col p-8 gap-7 bg-white rounded-t-[50px]">
                 <div class="flex flex-col gap-5">
+                    <div class="flex items-center justify-between gap-6">
+                        <div class="flex items-center gap-6">
+                            <svg width="18" height="22" viewBox="0 0 18 22" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7 16L3 12L4.41 10.59L7 13.17L13.59 6.58L15 8M9 0L0 4V10C0 15.55 3.84 20.74 9 22C14.16 20.74 18 15.55 18 10V4L9 0Z"
+                                    fill="#FE9AA0" />
+                            </svg>
+                            <h1>Ubah Kata Sandi</h1>
+                        </div>
+                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 1L7 7L1 13" stroke="#ACACAC" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <hr>
                     <div class="flex items-center justify-between gap-6">
                         <div class="flex items-center gap-6">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -50,6 +71,7 @@
                                     d="M14 20C14.5304 20 15.0391 19.7893 15.4142 19.4142C15.7893 19.0391 16 18.5304 16 18V2C16 1.46957 15.7893 0.960859 15.4142 0.585786C15.0391 0.210714 14.5304 0 14 0H8V7L5.5 5.5L3 7V0H2C1.46957 0 0.960859 0.210714 0.585786 0.585786C0.210714 0.960859 0 1.46957 0 2V18C0 18.5304 0.210714 19.0391 0.585786 19.4142C0.960859 19.7893 1.46957 20 2 20H14Z"
                                     fill="#FE9AA0" />
                             </svg>
+
                             <h1>Syarat & Ketentuan</h1>
                         </div>
                         <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
