--- a/confirm-donation.html
+++ b/confirm-donation.html
@@ -23,9 +23,9 @@
         </nav>
     </header>
 
-    <main class="bg-[#ffff] max-w-screen-sm mx-auto min-h-screen">
-        <section class="p-8">
-            <form action="confirm-donation.html" method="post">
+    <form action="confirm-donation.html" method="post">
+        <main class="bg-[#ffff] max-w-screen-sm mx-auto min-h-screen">
+            <section class="p-8">
                 <div class="flex flex-col gap-3 p-4 text-white rounded-xl bg-primary">
                     <h2 class="text-xl font-semibold">Donasi Sebesar</h2>
                     <h1 class="text-4xl font-semibold">Rp. 750.000</h1>
@@ -64,15 +64,16 @@
                         </label>
                     </div>
                 </div>
-                <div class="sticky bottom-0 py-3">
-                    <button
-                        class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
-                        <h1>Konfirmasi</h1>
-                    </button>
-                </div>
-            </form>
-        </section>
-    </main>
+            </section>
+        </main>
+
+        <div class="sticky bottom-0 max-w-screen-sm px-8 py-3 mx-auto bg-white">
+            <button class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
+                <h1>Konfirmasi</h1>
+            </button>
+        </div>
+    </form>
+
 </body>
 
 </html>
