--- a/payment.html
+++ b/payment.html
@@ -23,9 +23,9 @@
         </nav>
     </header>
 
-    <main class="bg-[#ffff] max-w-screen-sm mx-auto min-h-screen">
-        <section class="p-8">
-            <form action="confirm-donation.html" method="post">
+    <form action="confirm-donation.html" method="post">
+        <main class="bg-[#ffff] max-w-screen-sm mx-auto min-h-screen">
+            <section class="p-8">
                 <div class="flex flex-col gap-6">
                     <h1 class="text-4xl font-semibold text-primary">Rp. 750.000</h1>
                     <div class="flex justify-between text-lg text-primary">
@@ -33,74 +33,76 @@
                         <p>Rincian</p>
                     </div>
                 </div>
-        </section>
-        <section class="w-full bg-primary">
-            <h1 class="py-3 text-lg font-semibold text-center text-white">Pilih dalam 23:59:43</h1>
-        </section>
-        <section class="p-8">
-            <h1 class="text-lg text-[#4A4A4A] font-semibold">Semua Metode Pembayaran</h1>
-            <div class="flex flex-col justify-center gap-5 my-8">
-                <div class="flex justify-between">
-                    <h1 class="text-[#ACACAC] text-lg font-semibold">Virtual Account</h1>
-                    <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
-                            fill="#ACACAC" />
-                    </svg>
+            </section>
+            <section class="w-full bg-primary">
+                <h1 class="py-3 text-lg font-semibold text-center text-white">Pilih dalam 23:59:43</h1>
+            </section>
+            <section class="p-8">
+                <h1 class="text-lg text-[#4A4A4A] font-semibold">Semua Metode Pembayaran</h1>
+                <div class="flex flex-col justify-center gap-5 my-8">
+                    <div class="flex justify-between">
+                        <h1 class="text-[#ACACAC] text-lg font-semibold">Virtual Account</h1>
+                        <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
+                                fill="#ACACAC" />
+                        </svg>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="/assets/images/payment-bca.png" alt="">
+                        <img src="/assets/images/payment-mandiri.png" alt="">
+                        <img src="/assets/images/payment-bni.png" alt="">
+                        <img src="/assets/images/payment-bsi.png" alt="">
+                        <img src="/assets/images/payment-bri.png" alt="">
+                    </div>
                 </div>
-                <div class="flex gap-3">
-                    <img src="/assets/images/payment-bca.png" alt="">
-                    <img src="/assets/images/payment-mandiri.png" alt="">
-                    <img src="/assets/images/payment-bni.png" alt="">
-                    <img src="/assets/images/payment-bsi.png" alt="">
-                    <img src="/assets/images/payment-bri.png" alt="">
+                <hr>
+                <div class="flex flex-col justify-center gap-5 my-8">
+                    <div class="flex justify-between">
+                        <h1 class="text-[#ACACAC] text-lg font-semibold">GoPay/GoPay Later</h1>
+                        <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
+                                fill="#ACACAC" />
+                        </svg>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="/assets/images/payment-qris.png" alt="qris" class="">
+                        <img src="/assets/images/payment-gopay.png" alt="qris" class="">
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <div class="flex flex-col justify-center gap-5 my-8">
-                <div class="flex justify-between">
-                    <h1 class="text-[#ACACAC] text-lg font-semibold">GoPay/GoPay Later</h1>
-                    <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
-                            fill="#ACACAC" />
-                    </svg>
+                <hr>
+                <div class="flex flex-col justify-center gap-5 my-8">
+                    <div class="flex justify-between">
+                        <h1 class="text-[#ACACAC] text-lg font-semibold">Qris</h1>
+                        <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
+                                fill="#ACACAC" />
+                        </svg>
+                    </div>
+                    <div class="flex gap-3">
+                        <img src="/assets/images/payment-qris.png" alt="qris" class="">
+                        <img src="/assets/images/payment-dana.png" alt="qris" class="">
+                        <img src="/assets/images/payment-ovo.png" alt="qris" class="">
+                        <img src="/assets/images/payment-linkaja.png" alt="qris" class="">
+                    </div>
                 </div>
-                <div class="flex gap-3">
-                    <img src="/assets/images/payment-qris.png" alt="qris" class="">
-                    <img src="/assets/images/payment-gopay.png" alt="qris" class="">
+                <hr>
+                <div class="flex justify-center gap-3 mt-20 mb-2">
+                    <h1 class="text-lg font-semibold text-primary">Powered by</h1>
+                    <img src="/assets/images/payment-midrans.png" alt="">
                 </div>
-            </div>
-            <hr>
-            <div class="flex flex-col justify-center gap-5 my-8">
-                <div class="flex justify-between">
-                    <h1 class="text-[#ACACAC] text-lg font-semibold">Qris</h1>
-                    <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M6.25012 10.0792C6.46722 10.3573 6.7913 10.5899 7.18764 10.7521C7.58397 10.9143 8.03763 11 8.50001 11C8.96238 11 9.41604 10.9143 9.81238 10.7521C10.2087 10.5899 10.5328 10.3573 10.7499 10.0792L16.6717 2.66151C17.6262 1.4671 16.3852 0 14.4226 0L2.57823 0C0.614793 0 -0.62532 1.4671 0.327502 2.66151L6.25012 10.0792Z"
-                            fill="#ACACAC" />
-                    </svg>
-                </div>
-                <div class="flex gap-3">
-                    <img src="/assets/images/payment-qris.png" alt="qris" class="">
-                    <img src="/assets/images/payment-dana.png" alt="qris" class="">
-                    <img src="/assets/images/payment-ovo.png" alt="qris" class="">
-                    <img src="/assets/images/payment-linkaja.png" alt="qris" class="">
-                </div>
-            </div>
-            <hr>
-            <div class="flex justify-center gap-3 mt-20 mb-2">
-                <h1 class="text-lg font-semibold text-primary">Powered by</h1>
-                <img src="/assets/images/payment-midrans.png" alt="">
-            </div>
-            <div class="sticky bottom-0 py-3">
-                <button class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
-                    <h1>Konfirmasi</h1>
-                </button>
-            </div>
-            </form>
-        </section>
-    </main>
+            </section>
+        </main>
+
+        <div class="sticky bottom-0 max-w-screen-sm px-8 py-3 mx-auto bg-white">
+            <button class="flex items-center justify-center w-full gap-3 p-2 text-white rounded-full bg-primary">
+                <h1>Konfirmasi</h1>
+            </button>
+        </div>
+    </form>
+
 </body>
 
 </html>
